tests/fixtures/positive/code-style/NoConsecutiveBlankLines.cls
public class Example {
    public void method1() {
        // Some code
    }

    public void method2() {
        // Single blank line above - valid
    }

    public void method3() {
        // Some code
    }

    public void method4() {
        // Single blank line - valid
    }

    private String field1;

    private String field2;
}

