tests/fixtures/negative/code-style/NoConsecutiveBlankLines.cls
public class Example {
    public void method1() {
        // Some code
    }


    public void method2() {
        // Two blank lines above - violation
    }

    public void method3() {
        // Some code
    }


    public void method4() {
        // Multiple blank lines - violation
    }

    private String field1;


    private String field2;
}

